Culture Related code changed.

--- a/RealtyAgencyMLS.Admin/Views/Shared/_Layout.cshtml
+++ b/RealtyAgencyMLS.Admin/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
     <link rel="stylesheet" href="~/css/main.css" type="text/css">
     <link href="~/sweet-alert/sweetalert.css" rel="stylesheet" />
     <script src="~/js/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.21/css/jquery.dataTables.min.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.21/css/jquery.dataTables.min.css"/>
     <!--[if lt IE 9]>
         <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -144,6 +144,8 @@
                             <li><a asp-controller="VehicleType" asp-action="Index">VehicleType</a></li>
                             <li><a asp-controller="Company" asp-action="Index">Company</a></li>
                             <li><a asp-controller="Vehicle" asp-action="Index">Vehicle</a></li>
+                            <li><a asp-controller="Culture" asp-action="Index">Culture</a></li>
+
 
                         </ul>
                     </li>
@@ -156,13 +158,6 @@
                             <li><a asp-controller="TrainingSection" asp-action="Manage">Upload Content</a></li>
                             <li><a asp-controller="TrainingSection" asp-action="Index">Agents Training</a></li>
                         </ul>
-                    </li>
-                    <li>
-                        <a href="https://dev-76900158.okta.com/home/dev-76900158_therealtyagencysamllive_1/0oacpnwr1vx3PAOYc5d6/alncpw7464FmBp6FD5d6">
-                            <a target="_blank" href="https://dev-76900158.okta.com/home/dev-76900158_therealtyagencysamllive_1/0oacpnwr1vx3PAOYc5d6/alncpw7464FmBp6FD5d6">
-                                <i class="fa fa-user"></i>
-                                Marketing WebSite
-                            </a>
                     </li>
                 </ul>
             </div>
