--- a/RealtyAgencyMLS.Web/Views/Shared/_FooterSection.cshtml
+++ b/RealtyAgencyMLS.Web/Views/Shared/_FooterSection.cshtml
@@ -10,7 +10,7 @@
                         <li><a asp-controller="Culture" asp-action="Index">Culture</a></li>
                         <li><a asp-controller="JoinTRA" asp-action="Index">Join TRA</a></li>
                         <li><a asp-controller="Partners" asp-action="Index">Partners</a></li>
-                        <li><a asp-controller="Blogs" asp-action="Index">Blog</a></li>
+                        <li><a asp-controller="Blog" asp-action="Index">Blog</a></li>
                         <li>Advertise </li>
                     </ul>
                 </div>
